--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/fragments :: head"></head>
 <body>
 <div th:replace="fragments/fragments :: navbar"></div>
-​
+
 <!--/*@thymesVar id="cart" type="java.util.Map<com.example.demo.model.Product, java.lang.Integer>"*/-->
 <main role="main">
     <div class="container">
@@ -48,7 +48,7 @@
                     ></td>
                     <td>
                         <form
-                                th:action="@{/cart}"
+                                th:action="@{/cart/remove}"
                                 method="post"
                                 style="display: inline"
                         >
@@ -77,33 +77,30 @@
                 </tr>
                 </tfoot>
             </table>
-            ​
+
             <form
-                    th:action="@{/cart}"
+                    th:action="@{/cart/update}"
                     method="post"
                     id="updateForm"
-                    th:if="${cart.size() > 0}"
-            >
+                    th:if="${cart.size() > 0}">
                 <!-- form doesn't support PATCH requests, but this tells Spring Boot to use @PatchMapping anyway. -->
                 <input type="hidden" name="_method" value="PATCH" />
                 <button type="submit" class="btn btn-primary">Update Cart</button>
             </form>
             <div th:if="${cart.size() == 0}">Nothing in your cart yet.</div>
         </div>
-        ​
-        <form action="/charge" method="POST" id="checkout-form">
-            <input
-                    type="hidden"
-                    th:value="${#numbers.formatCurrency(#aggregates.sum(list))}"
-                    name="amount"
-            />
-            <label
-            >Price:<span
-                    th:text="${#numbers.formatCurrency(#aggregates.sum(list))}"
-            /></label>
+
+        <form th:action="@{/charge}" method="POST" id="checkout-form">
+            <!--                    th:value="${#numbers.formatCurrency(#aggregates.sum(list))}"-->
+            <input type="hidden"
+                   th:value="${amount}"
+                   name="amount"/>
+            <label>
+                Price:<span th:text="${#numbers.formatCurrency(#aggregates.sum(list))}"/>
+            </label>
             <!-- NOTE: data-key/data-amount/data-currency will be rendered by Thymeleaf -->
-            <script
-                    src="https://checkout.stripe.com/checkout.js"
+            <h4 th:text="If you're seeing the amount, stripe is properly loaded: ${amount}"></h4>
+            <script src="https://checkout.stripe.com/checkout.js"
                     class="stripe-button"
                     th:attr="data-key=${stripePublicKey},
                  data-amount=${amount},
@@ -112,39 +109,12 @@
                     data-description="Spring course checkout"
                     data-image="https://www.baeldung.com/wp-content/themes/baeldung/favicon/android-chrome-192x192.png"
                     data-locale="auto"
-                    data-zip-code="false"
-            ></script>
+                    data-zip-code="false">
+            </script>
         </form>
-        ​
     </div>
 </main>
-​
+
 <div th:replace="fragments/fragments :: footer"></div>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
